--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</div>
 	</header>
 	<nav>
-	<div class="container image2">
+	<div class="container"></div>
 		<div id="logo"></div>
 		<div class="col2">
 		
@@ -96,7 +96,7 @@
 <footer><div class="container"></div>
 		
 		
-		
+	
 	  
 </footer>
 		
